objects/Account_HODI__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HODI History</relationshipLabel>
        <relationshipName>Account_HODI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Desired_Tier__c</fullName>
        <description>The Tier level which is assigned to that account after approved by HODI.</description>
        <label>Desired Tier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HODI_Inventory__c</fullName>
        <label>Approver</label>
        <referenceTo>HODI_Inventory__c</referenceTo>
        <relationshipLabel>Allocation HODI History</relationshipLabel>
        <relationshipName>Account_HODI</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HODI_Legacy_User__c</fullName>
        <label>HODI Legacy User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HODI_Name__c</fullName>
        <formula>HODI_Inventory__r.Head_of_Department__r.FirstName + HODI_Inventory__r.Head_of_Department__r.LastName</formula>
        <label>HODI Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOD_Comment__c</fullName>
        <description>This will store the comment of the HOD when requesting for the Account Service TIER increase</description>
        <label>HOD Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsRevoked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the HODI record is deleted this check box will be checked to true.</description>
        <label>IsRevoked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>This will store the HODI point for the account linked with this record.</description>
        <label>No. Of HODI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Tier__c</fullName>
        <description>The Tier level which was associated with that account before it was approved.</description>
        <label>Previous Tier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_HODI_Count__c</fullName>
        <label>Reverse HODI Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>A record will be created in this Object when an approval request for the change of a Service TIER of an Account is being approved by HODI.</description>
    <label>Account HODI</label>
    <nameField>
        <displayFormat>AHODI-{0000000000}</displayFormat>
        <label>Account HODI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account HODI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>HODI_Inventory__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Desired_Tier__c</columns>
        <columns>Points__c</columns>
        <columns>Previous_Tier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HODI_Inventory__c</field>
            <operation>contains</operation>
            <value>Kerry Lambert</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>